# repro-lab-Taldykbayeva

./: .pre-commit-config.yaml  README.md  pyproject.toml  verify.py
notebooks/: 01-repro-seeds.ipynb
runs/: model_seed173.pt  run_seed173.json
src/: seed_utils.py  train.py
