[project]
name = "repro-lab-taldykbayeva"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamiris"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "nbstripout (>=0.8.1,<0.9.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
